--- a/releases/dev/podinfo.yaml
+++ b/releases/dev/podinfo.yaml
@@ -15,7 +15,7 @@ spec:
     ref: master
   values:
     image:
-      repository: bthelen-pivotal/podinfo
+      repository: bthelenpivotal/podinfo
       tag: dev-hdtwcel9
     replicaCount: 1
     hpa:
