--- a/releases/prod/podinfo.yaml
+++ b/releases/prod/podinfo.yaml
@@ -15,6 +15,6 @@ spec:
     ref: master
   values:
     image:
-      repository: bthelen-pivotal/podinfo
+      repository: bthelenpivotal/podinfo
       tag: 0.4.11
     replicaCount: 3
