--- a/releases/dev/podinfo.yaml
+++ b/releases/dev/podinfo.yaml
@@ -16,7 +16,7 @@ spec:
   values:
     image:
       repository: bthelenpivotal/podinfo
-      tag: dev-hdtwcel9
+      tag: dev-fvk4vu5n
     replicaCount: 1
     hpa:
       enabled: false
